--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule ".circleci/edagames-server"]
-	path = .circleci/edagames-server
+[submodule "edagames-server"]
+	path = edagames-server
 	url = https://github.com/evbeda/edagames-server
 	branch = main
