--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   update_server:
     runs-on: ubuntu-latest
-    if: GITHUB_EVENT_NAME == update_server
+    if: $GITHUB_EVENT_NAME == update_server
     steps:
     - name: Temporarily disable "include administrators" branch protection
       uses: benjefferies/branch-protection-bot@master
