--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -1,20 +1,20 @@
-# This is a basic workflow to help you get started with Actions
 
 name: CI
 
-# Controls when the action will run. 
 on:
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-  
   repository_dispatch:
     types: [update_server, update_django, update_quoridor]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   update_server:
     runs-on: ubuntu-latest
     steps:
+    - name: Temporarily disable "include administrators" branch protection
+      uses: benjefferies/branch-protection-bot@master
+      if: always()
+      with:
+        access-token: ${{ secrets.ACCESS_TOKEN }}
+        branch: main
     - name: Checkout
       uses: actions/checkout@v2
     - name: Deploy
@@ -25,3 +25,9 @@ jobs:
         git config user.name EDA5
         git commit -am "Update EDAGames Server"
         git push origin main
+    - name: Enable "include administrators" branch protection
+      uses: benjefferies/branch-protection-bot@master
+      if: always()
+      with:
+        access-token: ${{ secrets.ACCESS_TOKEN }}
+        branch: main
