--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   update_server:
     runs-on: ubuntu-latest
+    if: ${{ env.GITHUB_EVENT_NAME == "update_server" }}
     steps:
     - name: Temporarily disable "include administrators" branch protection
       uses: benjefferies/branch-protection-bot@master
