--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   update_server:
     runs-on: ubuntu-latest
-    if: env.GITHUB_EVENT_NAME == "update_server"
     steps:
     - name: Temporarily disable "include administrators" branch protection
       uses: benjefferies/branch-protection-bot@master
@@ -20,14 +19,31 @@ jobs:
       uses: actions/checkout@v2
       with:
         token: ${{ secrets.ACCESS_TOKEN }}
-    - name: Deploy
+    - name: Config git
+      run: |
+        git config user.email eda5@eventbrite.com
+        git config user.name EDA5
+    - name: Update server
+      if: github.event_name == "update_server"
       working-directory: ${{ env.GITHUB_WORKSPACE }}
       run: |
         git submodule update --init --remote -- edagames-server
-        git config user.email eda5@eventbrite.com
-        git config user.name EDA5
         git commit -am "Update EDAGames Server"
-        git push origin main
+    - name: Update web
+      if: github.event_name == "update_django"
+      working-directory: ${{ env.GITHUB_WORKSPACE }}
+      run: |
+        git submodule update --init --remote -- edagames-django
+        git commit -am "Update EDAGames Web"
+    - name: Update game
+      if: github.event_name == "update_quoridor"
+      working-directory: ${{ env.GITHUB_WORKSPACE }}
+      run: |
+        git submodule update --init --remote -- edagames-quoridor
+        git commit -am "Update EDAGames Quoridor"
+    - name: Deploy
+      working-directory: ${{ env.GITHUB_WORKSPACE }}
+      run: git push origin main
     - name: Enable "include administrators" branch protection
       uses: benjefferies/branch-protection-bot@master
       if: always()
