--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -24,19 +24,19 @@ jobs:
         git config user.email eda5@eventbrite.com
         git config user.name EDA5
     - name: Update server
-      if: github.event_name == 'update_server'
+      if: github.event.action == 'update_server'
       working-directory: ${{ env.GITHUB_WORKSPACE }}
       run: |
         git submodule update --init --remote -- edagames-server
         git commit -am "Update EDAGames Server"
     - name: Update web
-      if: github.event_name == 'update_django'
+      if: github.event.action == 'update_django'
       working-directory: ${{ env.GITHUB_WORKSPACE }}
       run: |
         git submodule update --init --remote -- edagames-django
         git commit -am "Update EDAGames Web"
     - name: Update game
-      if: github.event_name == 'update_quoridor'
+      if: github.event.action == 'update_quoridor'
       working-directory: ${{ env.GITHUB_WORKSPACE }}
       run: |
         git submodule update --init --remote -- edagames-quoridor
